2003-07-25  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/manual/api.txt: various changes.

2003-07-24  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/util/cache_reaper.py.in (walk_func): fix for missing
	key file. (conf): added "keyfiles" option.

	* docs/manual/instConfig.txt: fixed some indentation problems in
	the rst source.

2003-07-23  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py: no longer store the full_key in the cached
	component.  Also, whitespace normalization.

2003-07-22  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/util/cache_reaper.py.in: no longer raise exception when
	an OSError occurs.

	* SkunkWeb/Services/sessionHandler/fssession_clean.sh: session
	cleaner script made to work nicely with AE Cache sessions.

	* SkunkWeb/Services/sessionHandler/AECacheSessionStore.py
	(Store.delete): now delete the session file rather than "expiring"
	it.

	* pylibs/AE/Cache.py: added "writeKeyFile" configuration
	parameter; writing of key files is now optional.  Also, stopped
	the chmod-ing of cache files.

2003-07-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: updated sessionHandler documentation.

	* SkunkWeb/Services/sessionHandler/Session.py (getSessionID): fix
	for session deletion.

2003-07-19  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/manual/instConfig.txt: started to make changes.  Also,
	wrapped lines.

	* configure.in, configure: removed silly --with-skunkweb option so
	we don't need to document it.

	* SkunkWeb/Services/sessionHandler/AECacheSessionStore.py: added
	session store that uses the AE Cache.

2003-07-18  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler: all modules in the package
	overhauled to support scoping.

	* SkunkWeb/Services/requestHandler/requestHandler.py,
	SkunkWeb/Services/web/protocol.py (_processRequest): : commented
	out debug statements in the main loop.

	* pylibs/DT/DTLexer.py (DTToken.__repr__): fix for closed elements.
